# ggez-2048

./: Cargo.toml  README.md
src/: common.rs  consts.rs  game.rs  main.rs
src/game/: assets.rs  board.rs  brush.rs  cell.rs  colors.rs  fonts.rs  layout.rs  state.rs
