[package]
name = "ggez-2048"
version = "0.1.0"
authors = ["Ngo Xuan Bach <thanbaiks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.7.1"
easer = "0.2.1"
mint = "0.5.1"
stretch = "0.3.2"